manifests/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sshd
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  sshd
    spec:
      containers:
      - name: sshd
        image: ghcr.io/larsks/sshd-example:main
        livenessProbe:
          tcpSocket:
            port: 22
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 22
          name: ssh
        volumeMounts:
        - name: authorized-keys
          mountPath: /config
      volumes:
        - name: authorized-keys
          configMap:
            name: authorized-keys
      restartPolicy: Always
