manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sshd
spec:
  ports:
  - port: 2200
    targetPort: ssh
  selector:
    apps: sshd
