manifests/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sshd
spec:
  entryPoints:
    - ssh
  routes:
    - match: 'HostSNI(`*`)'
      services:
        - name: sshd
          port: 2200
